word generator button

--- a/mashup.html
+++ b/mashup.html
@@ -35,7 +35,16 @@
  
     </div>
 
-    
+    <div class = "d3-generate-word">
+        <label>
+            <button onclick="word()" id = "d3-push-new-word">
+                Word here!
+            </button>
+        </label>
+
+    </div>
+
+
 
 </body>
 </html>
