add local css file

--- a/mashup.html
+++ b/mashup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M.A.S.H.U.P!</title>
+    <link rel = "stylesheet" href="mashup.css"></style>
 </head>
 <body>
     
@@ -72,8 +73,30 @@
         <span id = "d6-diceNumberHere" class = "d6-reflectNumberHere"> </span>
         </button>
 
-
     </div>
+
+    <div id = "d7-instructions-area">
+
+        <h3 id = "d7-h3-rules">
+        Instructions
+
+        </h3>
+            <ul>
+                <li>Click the <em>word</em> button to generate a word.</li>
+                <li>Click the <em>roll</em> the dice</li>
+                <li>The participant must do the corresponding action per dice side</li>
+            </ul> 
+        
+            <ol class = "indent">
+                <li><b class = "acronym">M</b> — eaning </li>
+                <li><b class = "acronym">A</b> — ntonym</li>
+                <li><b class = "acronym">S</b> — ynonym</li>
+                <li><b class = "acronym">H</b> — ave a friend to answer for you</li>
+                <li><b class = "acronym">U</b> — se in a sentence</li>
+                <li><b class = "acronym">P</b>  — icture it!</li>
+
+            </ol>
+      </div>
 
 
 
