--- a/mashup.html
+++ b/mashup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M.A.S.H.U.P!</title>
     <link rel = "stylesheet" href="mashup.css"></style>
+    <script src = "mashup.js"></script>
 </head>
 <body>
     
