added array of word selection || button to generate new word"

--- a/mashup.html
+++ b/mashup.html
@@ -21,8 +21,8 @@
     </div>
 
     
-    <div id = "d2-game-intro"> 
-    <h3 id = "d2-about-game">
+    <div class = "d2-game-intro"> 
+    <h3 class = "d2-about-game">
         About
     </h3>
 
