updated todo list in html and css

--- a/mashup.html
+++ b/mashup.html
@@ -1,17 +1,21 @@
-<!--TODO: Glossary-->
+<!--TODO: Glossary, BEM Method-->
+<!-- TODO: Dark theme friendly-->
+<!--TODO:responsive mobile-->
+<!--TODO: Timer-->
 
 <!DOCTYPE html>
 <html lang="en">
 <html data-darkreader-mode="dynamic" data-darkreader-scheme="dark">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>M.A.S.H.U.P!</title>
     <link rel = "stylesheet" href="mashup.css"></style>
     <script src = "mashup.js"></script>
 </head>
-<body>
-    
+
+<body class = "default" data-new-gr-c-s-check-loaded="8.909.0" data-gr-ext-installed="" cz-shortcut-listen="true">
     <div class = "invite">
         <!--Used BEM methods, named the block (<div>)invite-->
         <p class ="invite__greeting">
